--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "learn-reactjs",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://giakinh0823.github.io/reactjs-base-21/",
   "dependencies": {
     "@hookform/resolvers": "^2.6.1",
     "@material-ui/core": "^4.12.1",
@@ -13,6 +14,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
+    "gh-pages": "^3.2.3",
     "notistack": "^1.0.9",
     "query-string": "^4.3.4",
     "react": "^17.0.2",
